# godot-forwarder

./: .editorconfig  Cargo.toml  README.md
src/: config.rs  main.rs
