[package]
name = "godot-forwarder"
version = "0.1.0"
authors = ["Anthony Smith"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5.9"
